syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.raft";
option java_outer_classname = "RaftProto";

package raft;

service Raft {
  // Sends a greeting
  rpc Vote (VoteRequest) returns (VoteReply) {}
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesReply) {}
}

message VoteRequest {
  string candidateId = 1;
  uint32 term = 2;
  uint64 lastLogIndex = 3;
  uint32 lastLogTerm = 4;
}

message VoteReply {
  uint32 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  uint32 term = 1;
  string leaderId = 2;
  uint64 prevLogIndex = 3;
  uint32 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int32 leaderCommit = 6;
}

message LogEntry {
  string key = 1;
  string value = 2;
}

message AppendEntriesReply {
  uint32 term = 1;
  bool success = 2;
}

message ProtoRecord {
  string key = 1;
  optional string value = 2;
  uint64 index = 3;
  optional bool tombstone = 4;
}

